kubernetes/aks/system/monitoring/base/alloy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy-service
  namespace: monitoring
spec:
  ports:
    - port: 4317
      targetPort: 4317
      protocol: TCP
      name: grpc
    - port: 4318
      targetPort: 4318
      protocol: TCP
      name: http
  selector:
    app: alloy
